# yt-database-timestamps

./: README.md  pyproject.toml  run.py  yt_database.yaml
Modul Dokumentation/: delegates.documentation.md  font_manager.documentation.md  icons_dokumentation.md  signal_handler.documentation.md  style_manager.documentation.md  ui_manager.documentation.md  worker_manager.documentation.md
scripts/: README.md  __init__.py  chapter_statistics.py  compile_resources.py  emoji_scan.py  fix_channel_handles.py  fix_fts5_triggers.py  fix_transcript_lines.py  migrate_add_chapter_counts.py  migrate_add_fts.py  migrate_chapters_to_database.py  migrate_cli.py  migrate_markdown_to_database.py  update_existing_transcripts.py
src/yt_database/: __init__.py  database.py
src/yt_database/cli/: __init__.py  batch_transcribe.py  download_channel_metadata.py  get_video_transcription.py
src/yt_database/config/: __init__.py  logging_config.py  settings.py
src/yt_database/gui/: __init__.py  main_window.py  web_view_window.py
src/yt_database/models/: __init__.py  models.py  search_models.py  search_strategy.py
src/yt_database/resources/: detailed_database  icons.qrc  youtube_comment
src/yt_database/search/: query_parser.py  semantic_search_service.py  suggestion_provider.py  synonym_expander.py
src/yt_database/services/: __init__.py  analysis_prompt_service.py  batch_transcription_service.py  batch_transcription_worker.py  channel_video_worker.py  chapter_generation_worker.py  database_video_loader_worker.py  factory_config.py  file_service.py  formatter_service.py  generator_service.py  generator_worker.py  metadata_formatter.py  project_manager_service.py  protocols.py  selector_service.py  service_factory.py  transcript_service.py  (+3 more)
tests/: __init__.py  conftest.py  test_chapter_writing.py  test_markdown_replacement.py  test_transcript_example.md
tests/config/: test_config_init.py  test_file_logger_only_debug_and_error.py  test_logging_config.py  test_settings.py
tests/database/: test_database_init.py
tests/gui/: test_config_dialog.py  test_database_overview_widget.py  test_main_window.py  test_project_tree_widget.py  test_search_widget_tree.py  test_selector_test_toolbar.py  test_single_transcription_widget.py  test_video_selection_table_widget.py  test_web_view_window.py  test_worker_manager.py
tests/models/: test_models.py  test_models_init.py  test_search_models.py  test_search_strategy.py
tests/services/: __init__.py  test_channel_video_worker.py  test_chapter_generation_worker.py  test_database_video_loader_worker.py  test_file_service.py  test_formatter_service.py  test_generator_service.py  test_project_manager_service.py  test_protocols.py  test_selector_service.py  test_service_factory.py  test_service_init.py  test_single_transcription_service.py  test_single_transcription_worker.py  test_transcript_file_parsing.py  test_web_automation_service.py
tests/utils/: __init__.py  test_json_parsing.py  test_utils.py  test_utils_init.py
(+58 files in other folders)
